Unstuck NAV bar, modal text is adjusting correctly

--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,21 @@
   justify-content: space-evenly;
 }
 
+.field {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 .nav {
+  /* position: fixed; */
   color: aliceblue;
-  position: fixed;
   width: 100vw;
   font-weight: bold;
   font-size: 85%;
-  padding: 3%;
-  background-image: linear-gradient(to bottom, rgb(36, 120, 118), rgb(112, 75, 135));
-  border-bottom: 5px double rgb(102, 68, 120);
+  padding: 2%;
+  background-image: linear-gradient(to bottom, rgb(36, 120, 118), rgb(125, 90, 146));
+  border-bottom: 7px double rgb(102, 68, 120);
 }
 
 .image {
@@ -27,31 +33,48 @@
 
 .image:hover {
   filter: brightness(1.25);
+  size: 110%;
+  transform: scale(110%);
 }
 
 .modal {
-  margin: 20% 0 0 -50%;
+  /* margin: 20% 0 0 -50%; */
+  margin-top: 33vh;
+  margin-right: 62vw;
   display: flex;
-  width: 10vw;
+  width: 12vw;
   position: fixed;
   z-index: 999;
   border-radius: 3px;
 }
 
 .modalImg {
-  height: 30vw;
-  width: 30vw;
+  height: 35vw;
+  width: 35vw;
 }
 
 ul {
   list-style: none;
   background-color: rgb(239, 245, 255, 0.95);
   margin: 0;
-  height: 30vw;
+  height: 35vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: space-around;
+  
+
 }
 
-li,
-a {
-  padding: 1.5%;
-  width: 30vw;
+li, a {
+  font-weight: 500;
+  font-size: 2vw;
+  padding: 0.5%;
+  width: 35vw;
+  flex-shrink: 5;
 }
+
+/* a {
+  margin-left: -3px;
+} */
+
